# passkey

./: .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  项目实现深度分析报告.md
apps/app_flutter/: README.md  pubspec.yaml
apps/app_macos/: Package.swift  PassMac.entitlements  README.md  project.autofill.yml  project.yml
apps/codex-tauri/: README.md  index.html  package-lock.json  package.json
apps/codex-tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/codex-tauri/src-tauri/capabilities/: default.json
apps/codex-tauri/src-tauri/src/: main.rs
apps/copilot-53-flutter/: README.md  pubspec.yaml
apps/copilot-53-tauri/: README.md  index.html  package-lock.json  package.json
apps/copilot-Claude-flutter/: README.md  pubspec.yaml
apps/extension_chrome/: README.md  background.js  content.js  dist  icons  manifest.json  options.css  options.html  options.js  package-lock.json  package.json  passkey_store.js  popup.css  popup.html  popup.js  scripts  webauthn_injected.js
apps/extension_firefox/: README.md  account_core.js  background.js  content.js  data_store.js  manifest.json  options.css  options.html  package-lock.json  package.json  popup.html  popup.js  webauthn_injected.js
apps/extension_safari/: .gitignore  README.md
apps/extension_shared/: README.md  background.js  content.js  manifest.json  options.js  (+3 more)
codex-Flutter-RustFFI/: 01-目标与边界.md  02-架构设计.md  03-开发计划-到完成.md  04-FFI接口规范草案.md  05-验证与交付清单.md  README.md
copilot-Claude-flutter/: .gitignore  README.md  analysis_options.yaml  pubspec.yaml
copilot-Claude-tauri/: README.md  index.html  package-lock.json  package.json
copilot-Claude-tauri/src-tauri/: Cargo.toml  tauri.conf.json
copilot-Claude-tauri/src-tauri/src/: commands.rs  crypto.rs  database.rs  lib.rs  main.rs  models.rs  sync.rs  totp.rs
docs/: README.md  browser-client-passkey-full-design-zh.md  cross-platform-architecture-zh.md  cross-platform-sync-backends-v2-zh.md  current-app-extension-implementation-reference-zh.md  implementation-spec-full-zh.md  manual-sync-import-export-design-and-implementation-zh.md  password-manager-design-zh.md  sqlite-schema.sql  sync-protocol-contract-zh.md  unified-data-sync-v2-design-and-plan-zh.md
scripts/: build-extension-chrome.sh  build-extension-firefox.sh  build-extension-safari.sh  sync-pass-icons.sh
(+521 files in other folders)
